--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
   </style>
 </head>
 <body>
-  <h1>Stats OPGG des joueurs</h1>
+  <h1>SoloQ Challenge - Deadline 31 Aout 2025</h1>
+  <p>Paris: Premier Passage Emerald ( Nathan & Romain ) <br> Passage Emerald de Romain & Nathan <br> Passage Diamant Louis </p>
   <div id="players"></div>
 
  <script>
