--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 <body>
   <h1>SoloQ Challenge - Deadline 31 Aout 2025</h1>
-  <p>Paris: Premier Passage Emerald ( Nathan & Romain ) <br> Passage Emerald de Romain & Nathan <br> Passage Diamant Louis </p>
+  <p style="text-align: center;">Premier Passage Emerald ( Nathan & Romain ) <br> Passage Emerald de Romain & Nathan <br> Passage Diamant Louis </p>
   <div id="players"></div>
 
  <script>
