--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         function getRankValue(rank) {
           const [tier, division] = rank.split(' ');
           const tierValue = rankOrder.indexOf(tier.charAt(0).toUpperCase() + tier.slice(1).toLowerCase());
-          const divisionValue = parseInt(division) || 0;
-          return tierValue * 10 - divisionValue;
+          const divisionValue = 5 - (parseInt(division) || 5);          
+          return tierValue * 10 + divisionValue;        
         }
 
         // Trier les joueurs par classement décroissant
